Shorten the comments in the property configuration